# Spark-Renderer

./: CMakeLists.txt  README.md  Vulkan.sln  Vulkan.vcxproj  Vulkan.vcxproj.filters  compile.bat
Bootstrapping/: bootstrap.json
Shaders/Compiled_Shader_Files/: BilateralFilter.frag.spv  CombinedImage.frag.spv  DefferedLightingPass.frag.spv  DefferedLightingPass.vert.spv  FXAA.frag.spv  GeometryPass.frag.spv  GeometryPass.vert.spv  Grass.frag.spv  Grass_GeoPass.vert.spv  Light_Shader.frag.spv  Light_Shader.vert.spv  RayGenMiss.rmiss.spv  Reflection_ClosestHit.rchit.spv  Reflection_Miss.rmiss.spv  Reflection_Raygen.rgen.spv  SSAOBlur_Shader.frag.spv  SSAO_Shader.frag.spv  SSAO_Shader.vert.spv  SSGI.frag.spv  SSGI_Blur_Shader.frag.spv  SSR.frag.spv  ShadowMiss.rmiss.spv  ShdowPass_Shader.vert.spv  Simple_Shader.frag.spv  Simple_Shader.vert.spv  SkyBox_Shader.frag.spv  SkyBox_Shader.vert.spv  TemporalAccumulation.frag.spv  Terrain_GeometryPass.frag.spv  Terrain_GeometryPass.vert.spv  closesthit.rchit.spv  meshshader.frag.spv  meshshader.mesh.spv  meshshader.task.spv  raygen.rgen.spv  shadow.rmiss.spv
Shaders/Shader_Files/: BilateralFilter.frag  CombinedImage.frag  DefferedLightingPass.frag  FXAA.frag  FullScreenQuad.vert  GeometryPass.frag  GeometryPass.vert  Grass.frag  Grass_GeoPass.vert  Light_Shader.frag  Light_Shader.vert  RayGenMiss.rmiss  Reflection_ClosestHit.rchit  Reflection_Miss.rmiss  Reflection_Raygen.rgen  SSAOBlur_Shader.frag  SSAO_Shader.frag  SSAO_Shader.vert  SSGI.frag  SSGI_Blur_Shader.frag  SSR - Copy.frag  SSR.frag  ShadowMiss.rmiss  Simple_Shader.frag  Simple_Shader.vert  SkyBox_Shader.frag  SkyBox_Shader.vert  TemporalAccumulation.frag  Terrain_GeometryPass.frag  Terrain_GeometryPass.vert  closesthit.rchit  raygen.rgen  shadow.rmiss
Source/: App.cpp  App.h  AssetManager.cpp  AssetManager.h  BufferManager.cpp  BufferManager.h  Camera.cpp  Camera.h  CombinedResult_FullScreenQuad.cpp  CombinedResult_FullScreenQuad.h  Drawable.cpp  Drawable.h  FXAA_FullScreenQuad.cpp  FXAA_FullScreenQuad.h  FramesPerSecondCounter.h  FullScreenQuad.cpp  FullScreenQuad.h  GitHub.lnk  Grass.cpp  Grass.h  Instances.h  Light.cpp  Light.h  Lighting_FullScreenQuad.cpp  Lighting_FullScreenQuad.h  Main.cpp  MeshLoader.cpp  MeshLoader.h  Model.cpp  Model.h  Pipeline_Manager.cpp  Pipeline_Manager.h  RT_Reflections.cpp  RT_Reflections.h  RT_Shadows.cpp  RT_Shadows.h  RayTracing.cpp  RayTracing.h  SSAOBlur_FullScreenQuad.cpp  SSAOBlur_FullScreenQuad.h  (+21 more)
Textures/: 056YLZHAAE0NNO75KNGUTB3MR.mtl
Textures/Bistro/: Untitled.gltf
Textures/Bunny/: scene.gltf
Textures/Car/: license.txt  scene.gltf
Textures/CornelBox/: Cornel.gltf
Textures/Cube/: Cube.gltf  Plane.gltf
Textures/Cube/Terrain/: HighResPlane.gltf
Textures/Dragon/: scene.gltf
Textures/Dragon2/: scene.gltf
Textures/EmptyCornelBox/: Cornel.gltf
Textures/Floor/: scene.gltf
Textures/Grass/: BendingGrassHopefulFixThisTimeForReal.gltf  Grass.gltf  GrassStand1.gltf  GrassStrand.glb  GrassStrand2.gltf  Grasss901.gltf  Grassssssss.gltf  sketch.gltf  sketch.tilt
Textures/Head/: Untitled.gltf
Textures/Helmet/: DamagedHelmet.gltf  Helmet.gltf
Textures/Helmet2/: model.gltf  model.mtl
Textures/Horse/: Horse.gltf
Textures/Mech/: license.txt  scene.gltf
Textures/PBR_Sponza/: Sponza.gltf
Textures/Room/: Room.gltf
Textures/ScifiHelmet/: SciFiHelmet.gltf
Textures/Sponza/glTF/: Sponza.gltf
Textures/Wall/: Cube.gltf  scene.gltf
Textures/Wall2/: Cube.gltf  scene.gltf
Textures/Wall3/: Cube.gltf  scene.gltf
Textures/Wall4/: Cube.gltf  scene.gltf
Textures/WaterBottle/: WaterBottle.gltf
Textures/horse_statue/: horse_statue_01_4k.gltf
exe/: imgui.ini
